[gd_scene load_steps=20 format=2]

[ext_resource path="res://Dialog/Dialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Raleway-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Characters/darwin.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/lawyer.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/indicator.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/dialogue.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Raleway-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/Backgrounds/courtroom.png" type="Texture" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://Assets/UI/progress-bar-2.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/progress-bar-3.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/progress-bar-1.png" type="Texture" id=12]






[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 591.531, 113.087 ), Vector2( 591.531, 120 ) ]
}

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 1 )
colors = PoolColorArray( 1, 1, 1, 0.72549 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 500

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 30
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Courtroom" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="Courtroom"]
position = Vector2( -124.685, -37.114 )
texture = ExtResource( 8 )
centered = false

[node name="Morris" type="Sprite" parent="Courtroom"]
position = Vector2( 278.151, 249.622 )
texture = ExtResource( 4 )

[node name="Darwin" type="Sprite" parent="Courtroom"]
position = Vector2( 626.874, 245.343 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 10.0
margin_top = 15.0
margin_right = 150.0
margin_bottom = 55.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="Control"]
visible = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -316.265
margin_top = -158.13
margin_right = 321.735
margin_bottom = -21.1301
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 1

[node name="name-label" type="RichTextLabel" parent="Control/Popup"]
margin_left = 95.3498
margin_top = 7.22638
margin_right = 287.35
margin_bottom = 31.2264
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Charles Darwin[/center]"
text = "Charles Darwin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog-text" type="RichTextLabel" parent="Control/Popup"]
margin_left = 23.0
margin_top = 42.0
margin_right = 619.0
margin_bottom = 118.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Welcome  to Edinburg! Use the arrow keys to walk to a door, and press SPACE to enter."
text = "Welcome  to Edinburg! Use the arrow keys to walk to a door, and press SPACE to enter."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="Control/Popup"]
position = Vector2( 591.531, 113.087 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Popup/next-indicator"]
autoplay = "IDLE"
anims/IDLE = SubResource( 3 )

[node name="Tween" type="Tween" parent="Control/Popup"]

[node name="NextLevel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="Sprite" parent="NextLevel"]
position = Vector2( -124.685, -37.114 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite" type="Sprite" parent="NextLevel"]
position = Vector2( 480, 268.055 )
scale = Vector2( 1, 250 )
texture = SubResource( 5 )

[node name="Level1" type="Sprite" parent="NextLevel"]
visible = false
position = Vector2( 480, 268.055 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 12 )

[node name="Level2" type="Sprite" parent="NextLevel"]
visible = false
position = Vector2( 480, 268.055 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )

[node name="Level3" type="Sprite" parent="NextLevel"]
visible = false
position = Vector2( 480, 268.055 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 11 )

[node name="RichTextLabel2" type="RichTextLabel" parent="NextLevel"]
anchor_left = 0.5
anchor_top = 0.727
anchor_right = 0.5
anchor_bottom = 0.727
margin_left = -129.732
margin_top = -71.909
margin_right = 135.268
margin_bottom = -39.909
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Press Space to Continue"
text = "Press Space to Continue"
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="RichTextLabel" parent="NextLevel"]
anchor_left = 0.5
anchor_top = 0.727
anchor_right = 0.5
anchor_bottom = 0.727
margin_left = -201.822
margin_top = -216.932
margin_right = 210.178
margin_bottom = -177.932
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Now onto the Second Level"
text = "Now onto the Second Level"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Control/Popup/Tween" to="Control/Popup" method="_on_Tween_tween_completed"]
